--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ filetype = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+pyyaml = "^6.0"
 
 [build-system]
 requires = ["poetry-core"]
